--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,6 +36,10 @@
         <servlet-name>FinanceServlet</servlet-name>
         <servlet-class>ece356.FinanceServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AuditTrailServlet</servlet-name>
+        <servlet-class>ece356.AuditTrailServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -71,6 +75,10 @@
     <servlet-mapping>
         <servlet-name>FinanceServlet</servlet-name>
         <url-pattern>/FinanceServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AuditTrailServlet</servlet-name>
+        <url-pattern>/AuditTrailServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>20</session-timeout>
