Deleted CreateProcedureServlet since ProcedureServlet can handle create, update, and delete operations. Added message field to QueryResult in the case of empty resultset (use message from SQLException)

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -45,8 +45,8 @@
         <servlet-class>ece356.ViewVisitationServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>CreateProcedureServlet</servlet-name>
-        <servlet-class>ece356.CreateProcedureServlet</servlet-class>
+        <servlet-name>ProcedureServlet</servlet-name>
+        <servlet-class>ece356.ProcedureServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
@@ -93,8 +93,8 @@
         <url-pattern>/ViewVisitationServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>CreateProcedureServlet</servlet-name>
-        <url-pattern>/CreateProcedureServlet</url-pattern>
+        <servlet-name>ProcedureServlet</servlet-name>
+        <url-pattern>/ProcedureServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>20</session-timeout>
