Added ability to add patients

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -48,6 +48,10 @@
         <servlet-name>ProcedureServlet</servlet-name>
         <servlet-class>ece356.ProcedureServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CreatePatientServlet</servlet-name>
+        <servlet-class>ece356.CreatePatientServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -95,6 +99,10 @@
     <servlet-mapping>
         <servlet-name>ProcedureServlet</servlet-name>
         <url-pattern>/ProcedureServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CreatePatientServlet</servlet-name>
+        <url-pattern>/CreatePatientServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>20</session-timeout>
