--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,8 +13,8 @@
         <servlet-class>ece356.UpdatePersonalInfoServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>AppointmentServlet</servlet-name>
-        <servlet-class>ece356.AppointmentServlet</servlet-class>
+        <servlet-name>ViewAppointmentServlet</servlet-name>
+        <servlet-class>ece356.ViewAppointmentServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>UsersServlet</servlet-name>
@@ -56,6 +56,10 @@
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>ece356.LogoutServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CreateAppointmentServlet</servlet-name>
+        <servlet-class>ece356.CreateAppointmentServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -69,8 +73,8 @@
         <url-pattern>/UpdatePersonalInfoServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>AppointmentServlet</servlet-name>
-        <url-pattern>/AppointmentServlet</url-pattern>
+        <servlet-name>ViewAppointmentServlet</servlet-name>
+        <url-pattern>/ViewAppointmentServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>UsersServlet</servlet-name>
@@ -111,6 +115,10 @@
     <servlet-mapping>
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/LogoutServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CreateAppointmentServlet</servlet-name>
+        <url-pattern>/CreateAppointmentServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>20</session-timeout>
